--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
               </ul>
             </li>
             <li>
-              Rendering engine
-              <ul>
-                <li>Built on SceneJS</li>
-              </ul>
+              Rendering engine built on SceneJS
             </li>
             <li>User-created annotations and custom views</li>
             <li>API for embedding Human content into external websites</li>
