--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <section>
         <h3>For Example...</h3>
-        <a href="http://localhost:5000/widgets/default/?m=sig/heart.json&ui-tools=true&ui-panel=true&ui-annotations=true" target="_blank">The Human Heart</a>
+        <a href="http://preview.biodigital.com/widgets/default/?m=public_preview/heart_previews_combined.json&ui-tools=true&ui-panel=true&ui-annotations=true" target="_blank">The Human Heart</a>
       </section>
 
       <section>
@@ -105,16 +105,16 @@
         <h3>Types of Content</h3>
         <ul>
           <li>
-            <a target="_blank" href="http://localhost:5000/widgets/default/?m=sig/brain.json&ui-tools=true">Static Content</a>
+            <a target="_blank" href="http://preview.biodigital.com/widget/?m=public_preview/brain_whole_test.json&ui-tools=true">Static Content</a>
           </li>
           <li>
-            <a target="_blank" href="http://localhost:5000/widgets/default/?m=sig/glucose.json&ui-tools=true&ui-panel=true">Animations</a>
+            <a target="_blank" href="http://human.biodigital.com/widget?m=client/about/glucose_transport_tour.json&ui-tools=true&ui-panel=true&pre=false">Animations</a>
           </li>
           <li>
-            <a target="_blank" href="http://localhost:5000/widgets/default/?m=sig/acl_repair.json&ui-tools=true&ui-panel=true">Basic Tours</a>
+            <a target="_blank" href="http://human.biodigital.com/widget?m=acl_repair&ui-tools=true&ui-panel=true&pre=false">Basic Tours</a>
           </li>
           <li>
-            <a target="_blank" href="http://localhost:5000/widgets/default/?m=sig/cranio.json&ui-tools=true&ui-panel=true">Complex Tours</a>
+            <a target="_blank" href="http://human.biodigital.com/widgets/craniofacial/?m=craniofacial/fronto-orbital_advancement.json&ui-tools=true&ui-panel=true&pre=false">Complex Tours</a>
           </li>
           <li>(+ text, audio, video, etc.)</li>
         </ul>
