Link to biodigital

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         <ul>
           <li><a href="mailto:tarek@biodigital.com">tarek@biodigital.com</a></li>
           <li><a target="_blank" href="https://twitter.com/thsherif">@thsherif</a></li>
+          <li><a target="_blank" href="https://www.biodigital.com">www.biodigital.com</a></li>
         </ul>
       </section>
     </div>
